Configurando o endpoint de introspecção de tokens no Authorization Server

--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 
-		<!-- Oauth2 -->
+		<!-- OAuth2 -->
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
